--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # H2
-# spring.h2.console.enabled = true
-# spring.h2.console.path = /h2
-# spring.datasource.url = jdbc:h2:mem:etdb;DB_CLOSE_ON_EXIT=FALSE
+spring.h2.console.enabled = true
+spring.h2.console.path = /h2
+spring.datasource.url = jdbc:h2:mem:etdb;DB_CLOSE_ON_EXIT=FALSE
 
 # MySQL
-spring.datasource.url = jdbc:mysql://localhost/etdb
-spring.datasource.username = root
-spring.datasource.password = noxteryn
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+# spring.datasource.url = jdbc:mysql://localhost/etdb
+# spring.datasource.username = root
+# spring.datasource.password = noxteryn
+# spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# spring.jpa.hibernate.ddl-auto = update
+# spring.jpa.show-sql = true
 
 # Security
 spring.security.user.name = noxteryn
